<resources>
    <string name="app_name">Disleksia App</string>

    <string name="app_n_kamus">Kamus</string>

    <string name="p1">Belajar menulis dan membaca</string>
    <string name="p2">untuk Disleksia</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="username">Username</string>
    <string name="name">Nama</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="tanggaLahir">Tanggal Lahir (dd-mm-yyyy)</string>
    <string name="register">Register</string>
    <string name="back_to_login">Login</string>
    <string name="kata_awal">Kata yang Akan di Cek</string>

    <!-- Category name for the vocabulary words  [CHAR LIMIT=20] -->
    <string name="simbol_huruf">Simbol Huruf</string>
    <string name="simbol_angka">Simbol Angka</string>
    <string name="kata_benda">Kata Benda</string>
    <string name="kata_kerja">Kata Kerja</string>
    <string name="kata_sifat">Kata Sifat</string>
    <string name="kata_keterangan">Kata Keterangan</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login2">Login</string>
    <string name="masuk">masuk</string>
    <string name="saya_sudah_punya_akun">saya sudah punya akun</string>
    <string name="cek_kata">cek kata</string>
    <string name="daftar">daftar</string>

    <string name="perbaikan_kata">PERBAIKAN KATA</string>
    <string name="tentang">TENTANG</string>
    <string name="permainan">PERMAINAN</string>
    <string name="bantuan">BANTUAN</string>
    <string name="kamus">KAMUS</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="logout">Logout</string>
    <string name="petunjuk">PETUNJUK</string>
    <string name="a_petubjuk_kamus">A. Petunjuk Kamus</string>
    <string name="petunjuk_kamus_1">1. Menu kamus merupakan menu yang berisi kamus bahasa indonesia yang didalamnya dibagi menjadi 7 menu yaitu simbol huruf, simbol angka, akhiran konsonan, ng, ny,  kata benda, kata kerja, kata sifat dan kata keterangan.</string>
    <string name="petunjuk_kamus_2">2. Menu simbol huruf terdapat simbol huruf, huruf vokal dan huruf konsonan. Terdapat huruf kapital dan huruf kecil.</string>
    <string name="petunjuk_kamus_3">3. Menu simbol angka terdapat angka dari nomor 0 – 9 disertai simbol angka dan ejaannya.</string>
    <string name="petunjuk_kamus_4">4. Menu akhiran konsonan, ng, ny berisi kumpulan kata dengan akhiran konsonan, kata yang mengandung ng dan kata yang mengandung ny.</string>
    <string name="petunjuk_kamus_5">5. Menu kata benda terdapat gambar dan kata terdiri dari buah, sayur, hewan, transportasi, sekolah, keluarga, warna.  </string>
    <string name="petunjuk_kamus_6">6. Menu kata kerja terdiri dari kumpulan kata kerja.</string>
    <string name="petunjuk_kamus_7">7. Menu kata sifat terdiri dari kumpulan kata sifat.</string>
    <string name="petunjuk_kamus_8">8. Menu kata keterangan terdiri dari kumpulan kata keterangan.</string>
    <string name="petunjuk_kamus_9">9. Pada kamus ini terdapat fitur pencarian kata yang terdapat pada kamus.</string>
    <string name="petunjuk_kamus_10">10. Pada kamus ini setiap kata atau benda yang diklik akan mengeluarkan suara ejaan dari kata yang ditekan.</string>
    <string name="b_petubjuk_perbaikan_kata">B. Petunjuk Perbaikan Kata</string>
    <string name="petunjuk_perbaikan_kata_1">1. Menu Perbaikan kata merupakan menu untuk memperbaiki kata yang diinputkan oleh pengguna.</string>
    <string name="petunjuk_perbaikan_kata_2">2. Cara menggunakanya yaitu ketik kata yang akan dikoreksi, setelah itu ketik tombol cek kata, hasil dari pencarian akan tampil.</string>
    <string name="petunjuk_perbaikan_kata_3">3. Untuk mendengar suara dari kata yang akan dicari cukup tekan gambar volume yang ada disamping tombol cek kata.</string>
    <string name="petunjuk_perbaikan_kata_4">4. Untuk mendengar suara dari kata hasil yaitu cukup sentuh kata hasil.</string>
    <string name="c_petubjuk_permainan">C. Petunjuk Permainan</string>
    <string name="petunjuk_permainan_1">1. Menu permainan yang pertama yaitu abjad, pada permainan ini akan disajikan abjad yang teracak.</string>
    <string name="petunjuk_permainan_2">2. Pemain harus mengurutkan abjad dengan benar berdasarkan huruf yang tertera sehingga pemain berhasil menyelesaikan permainan ini.</string>
    <string name="petunjuk_permainan_3">3. Permainan ini disediakan tombol untuk beralih ke abjad dalam huruf kapital dan huruf kecil.</string>
    <string name="petunjuk_permainan_4">4. Menu permainan yang kedua yaitu kuis, dalam kuis ini terbagi menjadi enam menu, 5 menu kuis dan 1 menu skor. 5 menu kuis yaitu kuis simbol angka, kata benda, kata kerja, kata sifat dan kata keterangan.</string>
    <string name="petunjuk_permainan_5">5. Kuis ini disajikan dengan gambar dan terdapat huruf teracak, pemain diminta untuk menyusun sebuah kata dari huruf yang telah teracak. Kata yang mendiskripsikan gambar.</string>
    <string name="petunjuk_permainan_6">6. Kuis ini terdiri dari 10 soal setiap menu.</string>
    <string name="petunjuk_permainan_7">7. Dalam menjawab kuis, setiap kuis akan dibatasi waktu 30 detik.</string>
    <string name="petunjuk_permianan_8">8. Jika pemain dapat menjawab dengan benar satu soal, akan mendapatkan skor 1, jika salah akan mendapatkan skor 0.</string>
    <string name="petunjuk_permainan_9">9. Skor total akan muncul diakhir ketika pemain sudah menyelesaikan kuis</string>
    <string name="petunjuk_permainan_10">10. Menu skor berisi akumulasi dari skor permainan.</string>

    <string name="petunjuk_permainan_11">11. Menu permainan ketiga yaitu pengucapan, pada permainan ini akan muncul huruf yang telah teracak. Peraturan permainannya yaitu pemain mengucapkan huruf yang muncul, jika pemain dapat mengucapkan huruf dengan benar maka pemain dapat melanjutkan ke huruf berikutnya, jika tidak pemain tidak bisa melanjutkan ke huruf berikutnya. </string>
    <string name="petunjuk_permainan_12">12. Permainan pengucapan memiliki tombol bantuan suara pengejaan huruf yang tertera.</string>

    <string name="tentang_isi">Aplikasi disleksia sebagai media pembantu penderita disleksia dari umur 6 tahun keatas. Aplikasi ini fokus untuk membantu penderita disleksia dalam mempelajari kata dan mengenal huruf dengan benar. Aplikasi ini dikembangkan oleh Maryati, mahasiswi UPN "Veteran" Yogyakarta dalam penelitian Media Pengembangan Pembelajaran untuk Penderita Disleksia dengan Algoritma Jaro Winkler Distance dan Anagram Berbasis Android.</string>
    <string name="disleksia_app">Disleksia App</string>

    <string name="msg_no_notes">No notes found!</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="lbl_edit_note_title">Edit Note</string>
    <string name="hint_enter_note">Enter your note!</string>
    <string name="hasil_kosong">Kata yang anda cari tidak ditemukan</string>
    <string name="skor">skor</string>
    <string name="profil">profil</string>
    <string name="ubah">Ubah</string>
    <string name="kuis">KUIS</string>
    <string name="pengucapan">PENGUCAPAN</string>
    <string name="abjad">ABJAD</string>
    <string name="jam_dan_tanggal">Jam dan Tanggal</string>
    <string name="_1">1</string>
    <string name="skor2">Skor</string>
    <string name="tertera">Ucapkan huruf yang tertera dibawah ini:</string>
    <string name="_00_30">00:30</string>
    <string name="nilai_0">Nilai: 0</string>
    <string name="pertanyaan_1_x">Pertanyaan: 1/x</string>
    <string name="selanjutnya">SELANJUTNYA</string>

</resources>
