<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#FFF9C4"
    tools:context=".permainan.kuis.KuisActivity">

    <Button
        android:id="@+id/btn_sa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simbol_angka"
        android:textColor="#662500"
        android:textSize="20dp"
        android:background="@drawable/btn_round4"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btn_kb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kata_benda"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:background="@drawable/btn_round5"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_kk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kata_kerja"
        android:textColor="#2b544d"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:background="@drawable/btn_round6"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_ks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kata_sifat"
        android:textColor="#8d0c0c"
        android:textSize="20dp"
        android:background="@drawable/btn_round7"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_kket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kata_keterangan"
        android:textColor="#2a410b"
        android:textSize="20dp"
        android:background="@drawable/btn_round8"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
</LinearLayout>