<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffeee6"
    tools:context=".ui.permainan.kuis.game.GameSimbolAngkaActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tvCountdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/_00_30"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:freezesText="true"/>
        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/black"
            android:text="@string/nilai_0"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/question_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvScore"
            android:textSize="18sp"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:text="@string/pertanyaan_1_x"
            android:textStyle="bold"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_margin="20dp"
        android:weightSum="1">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_height="160dp"
                app:srcCompat="@drawable/buku"
                android:id="@+id/imageView1" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/message1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textColor="@color/primary_color"
            android:gravity="center"
            android:text="Huruf yang diacak" />

        <TextView
            android:id="@+id/scrambledletters"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/primary_color"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="26sp"
            android:textStyle="bold" />
        <TextView

            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Susun huruf dengan urutan yang benar"
            android:paddingBottom="10dp"
            android:textColor="@color/primary_color"
            android:id="@+id/message2"
            />

        <EditText
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_color"
            android:ems="10"
            android:gravity="center"
            android:inputType="text" />
        <Button
            android:id="@+id/check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_round4"
            android:text="@string/selanjutnya"
            android:textColor="#4d0000"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>